--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -3,29 +3,50 @@ neardal_LT_REVISION = 1
 neardal_LT_AGE = 0
 
 #Rule to generate the binding headers
-neard-manager-proxy.h:  interface/org.neard.Manager.xml
-	dbus-binding-tool --mode=glib-client $<> $@
+neard_adapter_proxy.h:  interface/org.neard.Adapter.xml
+	gdbus-codegen --generate-c-code neard_adapter_proxy \
+			--c-namespace orgNeardAdp \
+			--interface-prefix org.neard.Adapter \
+			$<
 
-neard-adapter-proxy.h:  interface/org.neard.Adapter.xml
-	dbus-binding-tool --mode=glib-client $<> $@
+neard_device_proxy.h:  interface/org.neard.Device.xml
+	gdbus-codegen --generate-c-code neard_device_proxy \
+			--c-namespace orgNeardDev \
+			--interface-prefix org.neard.Device \
+			$<
 
-neard-target-proxy.h:  interface/org.neard.Target.xml
-	dbus-binding-tool --mode=glib-client $<> $@
+neard_manager_proxy.h:  interface/org.neard.Manager.xml
+	gdbus-codegen --generate-c-code neard_manager_proxy \
+			--c-namespace orgNeardMgr \
+			--interface-prefix org.neard.Manager \
+			$<
 
-neard-record-proxy.h:  interface/org.neard.Record.xml
-	dbus-binding-tool --mode=glib-client $<> $@
+neard_tag_proxy.h:  	interface/org.neard.Tag.xml
+	gdbus-codegen --generate-c-code neard_tag_proxy \
+			--c-namespace orgNeardTag \
+			--interface-prefix org.neard.Tag \
+			$<
 
-BUILT_SOURCES =	neard-manager-proxy.h \
-		neard-adapter-proxy.h \
-		neard-target-proxy.h \
-		neard-record-proxy.h
+neard_record_proxy.h:  interface/org.neard.Record.xml
+	gdbus-codegen --generate-c-code neard_record_proxy \
+			--c-namespace orgNeardRcd \
+			--interface-prefix org.neard.Record \
+			$<
+
+BUILT_SOURCES =	neard_adapter_proxy.h \
+		neard_device_proxy.h \
+		neard_manager_proxy.h \
+		neard_tag_proxy.h \
+		neard_record_proxy.h
 
 neardal_PRV_HDR = \
 		neardal_adapter.h \
+		neardal_device.h \
 		neardal_manager.h \
 		neardal_prv.h \
 		neardal_record.h \
-		neardal_target.h \
+		neardal_tag.h \
+		neardal_traces_prv.h \
 		neardal_tools.h
 
 # We don't want to install this header
@@ -35,23 +56,36 @@ noinst_HEADERS = $(BUILT_SOURCES) $(neardal_PRV_HDR)
 dist_neardalheaders_HEADERS =	neardal.h \
 				neardal_errors.h
 
-CLEANFILES = $(BUILT_SOURCES)
-EXTRA_DIST = interface/org.neard.Manager.xml interface/org.neard.Adapter.xml interface/org.neard.Target.xml interface/org.neard.Record.xml
+CLEANFILES = 	$(BUILT_SOURCES) \
+		neard_adapter_proxy.c \
+		neard_device_proxy.c \
+		neard_manager_proxy.c \
+		neard_tag_proxy.c \
+		neard_record_proxy.c
+
+EXTRA_DIST = interface/org.neard.Manager.xml interface/org.neard.Adapter.xml \
+	     interface/org.neard.Tag.xml interface/org.neard.Device.xml \
+	     interface/org.neard.Record.xml
 
 lib_LTLIBRARIES =		libneardal.la
-libneardal_la_SOURCES =	neardal.c \
+libneardal_la_SOURCES =		neardal.c \
 				neardal_adapter.c \
-				neardal_errors.c \
+				neard_adapter_proxy.c \
+				neardal_device.c \
+				neard_device_proxy.c \
 				neardal_manager.c \
+				neard_manager_proxy.c \
 				neardal_record.c \
-				neardal_target.c \
+				neard_record_proxy.c \
+				neardal_tag.c \
+				neard_tag_proxy.c \
 				neardal_tools.c \
 				neardal_traces.c
 
 libneardal_la_LDFLAGS = -version-info $(neardal_LT_CURRENT):$(neardal_LT_REVISION):$(neardal_LT_AGE)
-libneardal_la_CFLAGS = $(GLIB_CFLAGS) $(DBUS_CFLAGS)
+libneardal_la_CFLAGS = $(GLIB_CFLAGS) $(GIO_UNIX_CFLAGS)
 
-libneardal_la_LIBADD = $(GLIB_LIBS) $(DBUS_LIBS)
+libneardal_la_LIBADD = $(GLIB_LIBS) $(GIO_UNIX_LIBS)
 
 neardalheadersdir = $(includedir)/neardal
 
