--- a/ncl/Makefile.am
+++ b/ncl/Makefile.am
@@ -1,7 +1,9 @@
-noinst_PROGRAMS=ncl
+bin_PROGRAMS=ncl
 
 ncl_SOURCES =	ncl.c \
 		ncl_cmd.c
+
+noinst_HEADERS = ncl.h
 
 ncl_CFLAGS = $(GLIB_CFLAGS) -I../lib
 ncl_LDADD = $(GLIB_LIBS) ../lib/libneardal.la
