Use async call for ndef read/write
Change-Id: Ie84abeddb3de149bb746846159c15c57d76e036c

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,7 +3,7 @@ EXTRA_DIST = neardal.pc.in
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = neardal.pc
 
-SUBDIRS = lib ncl
+SUBDIRS = lib
 
 #Rule to generate doxygen documentation
 if HAVE_DOXYGEN
