--- a/project.config
+++ b/project.config
@@ -1,4 +1,6 @@
 [project]
 	state = active
+	description = "Domain: Network & Connectivity;"\n\
+
 [access]
 	inheritFrom = scm/acls/domain_network_and_connectivity
