Project settings updated

--- a/project.config
+++ b/project.config
@@ -1,5 +1,4 @@
 [project]
-	description = "Domain: Network & Connectivity;"\n\
-
+	description = "Domain: Network & Connectivity / NFC;"
 [access]
 	inheritFrom = scm/acls/domain_network_and_connectivity/nfc
